[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "ruff>=0.12.12",
    "scikit-learn>=1.7.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"   # 例：プロジェクトの下限に合わせる（py37〜py313対応）

[tool.ruff.lint]
# 既定の選択に加えて、行長(E501)とインポート整列(I; isort相当)を有効化
select = ["E4", "E7", "E9", "F", "E501", "I"]

# （任意）“Unsafe”な自動修正もまとめて許可したい場合（意味が変わる可能性あり）
# unsafe-fixes = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
